[metadata]
name = jjm
version = 0.1.2
author = rasputyashka
author_email = rasputyashka@gmail.com
url = https://github.com/rasputyashka/jjm
license = MIT

[options]
packages = find:
packages_dir =
    =src
python_requires = >=3.10
install_requires =
    toml

[options.packages.find]
where = src

[options.entry_points]
    console_scripts =
        jjm = jjm.cli:main


[flake8]
exclude =
    .git
    __pycache__,
    build,
    venv,
    dist
# Flake8 default ignore list:
# ['W504', 'B904', 'B901', 'E24', 'W503', 'B950', 'E123', 'E704', 'B903', 'E121', 'B902', 'E226', 'E126']
extend-ignore =
    E203,   #  Whitespace before ':' (false positive in slices, handled by black.
            #  see: https://github.com/psf/black/issues/315)
    D1,     #  Missing docstrings errors
    WPS306, #  Found class without a base class
    WPS421, #  Found wrong function call: print function
    WPS305, #  Found `f` string



extend-immutable-calls =
    Depends
# Fix pep8-naming: False positive N805 when running against `pydantic.validator`.
#   See https://github.com/PyCQA/pep8-naming/issues/169
classmethod-decorators =
    classmethod
    validator
    declared_attr
